# adventofcode

advent/: build.gradle.kts
advent/src/main/kotlin/: Advent.kt  Advent2.kt  Advent3.kt  Direction.java  Main.kt
advent2021/: build.gradle.kts
advent2021/src/main/kotlin/: Advent10.kt  Advent11.kt  Advent12.kt  Advent14.kt  Advent15.kt  Advent16.kt  Advent4.kt  Advent5.kt  Advent7.kt  Advent8.kt  Advent9.kt  Main.kt  TrieNode.kt
advent2021/src/test/kotlin/: TestAdvent10.kt  TestAdvent12.kt  TestAdvent14.kt  TestAdvent15.kt  TestAdvent16.kt  TestAdvent4.kt  TestAdvent5.kt
advent2022/src/main/kotlin/: Main.kt
advent2022_cpp/: CMakeLists.txt  build.sh  test.bat
advent2022_cpp/core/: CMakeLists.txt  advent.h  advent1.cpp  utils.hpp
advent2022_cpp/input/: input2_lose_test.txt
advent2022_cpp/main/: CMakeLists.txt  main.cpp
advent2022_cpp/test/: CMakeLists.txt  test.cpp
advent9/: build.gradle.kts
advent9/src/main/kotlin/: Advent.kt  Advent12.kt  Advent13.kt  Advent2.kt  Advent3.kt  Advent5.kt  Advent6.kt  Advent9.kt  IAdvent.kt  Main.kt  Trie.kt
advent9/src/test/kotlin/: TestAdvent10.kt  TestAdvent11.kt  TestAdvent12.kt  TestAdvent13.kt  TestAdvent4.kt  TestAdvent5.kt  TestAdvent6.kt  TestAdvent7.kt  TestAdvent8.kt  TestAdvent9.kt
adventofcode2020_kotlin/src/main/kotlin/: Advent1.kt  IAdvent.kt  Main.kt
